--- a/css/carousel.css
+++ b/css/carousel.css
@@ -1,4 +1,5 @@
 .carousel {
+	-webkit-transform: translate3d(0,0,0);
 	background: rgba(0,0,0,0.85);
 	position: fixed;
 	right: 0;
@@ -8,7 +9,7 @@
 	width: auto;
 	height: auto;
 	display: none;
-	z-index: 1;
+	z-index: 999;
 }
 
 .item {
